smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/space-after-metadata-unquoted.smithy
// Syntax error at line 3, column 1: Expected `metadata`, but found `metadatafoo` | Model
$version: "2.0"
metadatafoo"="bar"
